--- a/site/default/section/landing/style.css
+++ b/site/default/section/landing/style.css
@@ -4,4 +4,22 @@
 
 section.landing {
     background : white;
+    padding    : 80px 0;
+    font-size  : 14px;
+}
+
+section.landing .cta {
+    background  : #080;
+    margin      : 10px;
+    display     : inline-block;
+    padding     : 15px 30px;
+    color       : white;
+    transform   : rotate(-3deg);
+    font-weight : bold;
+    font-size   : 16px;
+}
+
+
+section.landing .cta:hover {
+    background: black;
 }
