--- a/site/default/style.css
+++ b/site/default/style.css
@@ -1,3 +1,16 @@
 body {
     font-family : "Courier New", sans-serif;
 }
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style : none;
+}
+
+a {
+    text-decoration : none;
+}
