--- a/resources/template/section/modal/style.css
+++ b/resources/template/section/modal/style.css
@@ -4,7 +4,7 @@
 
 .modal-inner,
 .modal-bg {
-    position:   absolute;
+    position:   fixed;
     top:        0;
     left:       0;
     right:      0;
