--- a/site/default/section/landing/style.css
+++ b/site/default/section/landing/style.css
@@ -4,16 +4,22 @@
 
 section.landing {
     background : white;
-    padding    : 80px 0;
+    padding    : 80px 20px;
     font-size  : 14px;
 }
 
+section.landing h2 {
+    font-weight : normal;
+    color       : #666;
+    margin: 40px 0;
+}
+
 section.landing .cta {
-    transform   : rotate(-3deg);
-    background    : #080;
-    color         : white;
+    transform  : rotate(-3deg);
+    background : #080;
+    color      : white;
 }
 
 section.landing .cta:hover {
-    background: black;
+    background : black;
 }
